--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <p>{{ site.description }}</p>
+          <p><a href="/imprint.html">Impressum</a></p>
       </div>
     </div>
 
