--- a/jekyll/_sass/_base.scss
+++ b/jekyll/_sass/_base.scss
@@ -66,7 +66,8 @@ figcaption {
  * Lists
  */
 ul, ol {
-    margin-left: $spacing-unit;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 li {
