--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -16,6 +16,7 @@ layout: default
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
+                <h5><small>(Ad revenue is used to cover hosting costs and nice little presents for my little daugther.)</small></h5>
           </div>
           <h3 itemprop="name headline">
               {{ page.title }}
